--- a/Osulloc/css/style.css
+++ b/Osulloc/css/style.css
@@ -181,3 +181,57 @@ footer .btn a{
         width: 758px;
     }
 }
+
+@media(max-width:460px){
+    .project{
+        width: 460px;
+    }
+
+    .title{
+        width: 460px;
+    }
+
+    .title h1{
+        text-align: center;
+        padding-left: 1rem;
+    }
+
+    .image img{
+        width: 740px;
+    }
+
+    .concept{
+        width: 460px;
+        padding-top: 1rem;
+    }
+
+    .concept img{
+        width: 100%;
+    }
+
+    .design{
+        width: 460px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+    }
+
+    .design h1{
+        text-align: center;
+    }
+
+    .design .web{
+        width: 650px;
+        float: none;
+    }
+
+    .design .mobile{
+        width: 500px;
+        height: 350px;
+    }
+
+    footer{
+        width: 460px;
+    }
+}
