--- a/ANANTI/css/style.css
+++ b/ANANTI/css/style.css
@@ -186,7 +186,7 @@ footer .btn a{
     }
 }
 
-@media(max-width:460px){
+/* @media(max-width:460px){
     body{
         width: 100%;
     }
@@ -242,4 +242,61 @@ footer .btn a{
     footer{
         width: 460px;
     }
-}
+} */
+
+@media (max-width: 420px) {
+    .project {
+      width: 350px;
+    }
+    .title {
+      width: 350px;
+    }
+    .title h1 {
+      text-align: center;
+      padding-left: 1rem;
+      font-size: 2rem;
+    }
+    .image {
+      width: 350px;
+      height: auto;
+    }
+    .image img {
+      width: 350px;
+    }
+    .concept {
+      width: 350px;
+      padding-top: 1rem;
+    }
+    .design {
+      width: 350px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 2rem;
+    }
+    .design h1 {
+      text-align: initial;
+      font-size: 2rem;
+      padding-left: 1rem;
+    }
+    .design .web {
+      height: 500px;
+      width: 290px;
+      float: none;
+    }
+    .design .mobile {
+      height: 500px;
+      width: 290px;
+      margin-left:0;
+    }
+    .footer {
+      width: 350px;
+      padding-top:30px;
+    }
+  
+    .btn{
+      width: 5rem;
+      height: 3rem;
+      padding: 5px;
+    }
+  }
