--- a/Osulloc/css/style.css
+++ b/Osulloc/css/style.css
@@ -245,6 +245,10 @@ footer .btn a{
 } */
 
 @media (max-width: 420px) {
+    body{
+        width: 100%;
+    }
+    
     .project {
       width: 350px;
     }
