--- a/ANANTI/css/style.css
+++ b/ANANTI/css/style.css
@@ -245,6 +245,13 @@ footer .btn a{
 } */
 
 @media (max-width: 420px) {
+    body{
+        width: 100%;
+    }
+    
+    body{
+        width: 100%;
+    }
     .project {
       width: 350px;
     }
