--- a/Osulloc/css/style.css
+++ b/Osulloc/css/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&family=Nunito+Sans:wght@200;300;400;500;600&family=Raleway:wght@100;200;300;400;500;600;700&display=swap');
 
 *{
-    margin: 0;padding: 0;
+    margin: 0 auto;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Nunito Sans', sans-serif;
 }
@@ -44,7 +45,7 @@ section{
     line-height: 3;
 }
 .design .web{
-    margin-left: 1rem;
+    /* margin-left: 1rem; */
     width: 800px;
     height: 500px;
     float: left;
@@ -65,7 +66,7 @@ section{
     float: left;
     overflow: scroll;
     border: solid 1px #4f709c;
-    margin-left: 1rem;
+    /* margin-left: 1rem; */
 }
 .design .mobile h3{
     font-size: 1.7rem;
@@ -248,7 +249,7 @@ footer .btn a{
     body{
         width: 100%;
     }
-    
+
     .project {
       width: 350px;
     }
@@ -291,7 +292,7 @@ footer .btn a{
     .design .mobile {
       height: 500px;
       width: 290px;
-      margin-left:0;
+      /* margin-left:0; */
     }
     .footer {
       width: 350px;
