--- a/vans/css/style.css
+++ b/vans/css/style.css
@@ -291,7 +291,7 @@ footer .btn a{
     .design .mobile {
       height: 500px;
       width: 290px;
-      /* margin-left:0; */
+      margin-left:0;
     }
     .footer {
       width: 350px;
