--- a/ANANTI/css/style.css
+++ b/ANANTI/css/style.css
@@ -80,7 +80,7 @@ section{
 footer{
     width: 1200px;
     height: 150px;
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     text-align: center;
     gap: 15px;
@@ -292,7 +292,7 @@ footer .btn a{
     .design .mobile {
       height: 500px;
       width: 290px;
-      margin-left:0;
+      /* margin-left:0; */
     }
     .footer {
       width: 350px;
