--- a/vans/css/style.css
+++ b/vans/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&family=Nunito+Sans:wght@200;300;400;500;600&family=Raleway:wght@100;200;300;400;500;600;700&display=swap');
 
 *{
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Nunito Sans', sans-serif;
@@ -63,10 +63,10 @@ section{
 .design .mobile{
     width: 350px;
     height: 500px;
-    /* float: left; */
+    float: left;
     overflow: scroll;
     border: solid 1px #4f709c;
-    /* margin-left: 1rem; */
+    margin-left: 1rem;
 }
 .design .mobile h3{
     font-size: 1.7rem;
@@ -253,7 +253,7 @@ footer .btn a{
       width: 350px;
     }
     .title {
-      width: 350px;
+      width: 440px;
     }
     .title h1 {
       text-align: center;
@@ -268,11 +268,11 @@ footer .btn a{
       width: 350px;
     }
     .concept {
-      width: 350px;
+      width: 440px;
       padding-top: 1rem;
     }
     .design {
-      width: 350px;
+      width: 440px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -291,10 +291,10 @@ footer .btn a{
     .design .mobile {
       height: 500px;
       width: 290px;
-      /* margin-left:0; */
+      margin-left:0;
     }
     .footer {
-      width: 350px;
+      width: 440px;
       padding-top:30px;
     }
   
