--- a/vans/css/style.css
+++ b/vans/css/style.css
@@ -246,6 +246,9 @@ footer .btn a{
 } */
 
 @media (max-width: 440px) {
+    *{
+        margin: 0 auto;
+    }
     body{
         width: 100%;
     }
@@ -253,7 +256,7 @@ footer .btn a{
       width: 350px;
     }
     .title {
-      width: 440px;
+      width: 350px;
     }
     .title h1 {
       text-align: center;
@@ -268,11 +271,11 @@ footer .btn a{
       width: 350px;
     }
     .concept {
-      width: 440px;
+      width: 350px;
       padding-top: 1rem;
     }
     .design {
-      width: 440px;
+      width: 350px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -291,10 +294,10 @@ footer .btn a{
     .design .mobile {
       height: 500px;
       width: 290px;
-      margin-left:0;
+      margin-left:30px;
     }
     .footer {
-      width: 440px;
+      width: 350px;
       padding-top:30px;
     }
   
