--- a/ANANTI/css/style.css
+++ b/ANANTI/css/style.css
@@ -245,11 +245,10 @@ footer .btn a{
     }
 } */
 
-@media (max-width: 440px) {
+@media (max-width: 420px) {
     *{
         margin: 0 auto;
     }
-
     body{
         width: 100%;
     }
@@ -257,26 +256,20 @@ footer .btn a{
       width: 350px;
     }
     .title {
-      width: 440px;
+      width: 350px;
     }
     .title h1 {
       text-align: center;
       padding-left: 1rem;
       font-size: 2rem;
     }
-    .image {
-      width: 350px;
-      height: auto;
-    }
-    .image img {
-      width: 350px;
-    }
+    
     .concept {
-      width: 440px;
+      width: 350px;
       padding-top: 1rem;
     }
     .design {
-      width: 440px;
+      width: 350px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -291,14 +284,15 @@ footer .btn a{
       height: 500px;
       width: 290px;
       float: none;
+      margin-left: 2rem;
     }
     .design .mobile {
       height: 500px;
       width: 290px;
-      margin-left:0;
+      margin-left:2rem;
     }
     .footer {
-      width: 440px;
+      width: 350px;
       padding-top:30px;
     }
   
