--- a/vans/css/style.css
+++ b/vans/css/style.css
@@ -245,7 +245,7 @@ footer .btn a{
     }
 } */
 
-@media (max-width: 440px) {
+@media (max-width: 420px) {
     *{
         margin: 0 auto;
     }
@@ -263,13 +263,7 @@ footer .btn a{
       padding-left: 1rem;
       font-size: 2rem;
     }
-    .image {
-      width: 350px;
-      height: auto;
-    }
-    .image img {
-      width: 350px;
-    }
+    
     .concept {
       width: 350px;
       padding-top: 1rem;
@@ -290,11 +284,12 @@ footer .btn a{
       height: 500px;
       width: 290px;
       float: none;
+      margin-left: 2rem;
     }
     .design .mobile {
       height: 500px;
       width: 290px;
-      margin-left:30px;
+      margin-left:2rem;
     }
     .footer {
       width: 350px;
